--- a/FeedApp/templates/FeedApp/friends.html
+++ b/FeedApp/templates/FeedApp/friends.html
@@ -7,7 +7,6 @@
     table {
         font-size: 15px;
         width: auto;
-
     }
 
     th,
@@ -18,7 +17,7 @@
 </style>
 
 <h2>
-    <p>My friends</p>
+    <p>My Friends</p>
 </h2>
 <table>
     <tr>
@@ -40,3 +39,90 @@
 </table>
 
 <br><br>
+
+<h2>
+    <p> Friend Requests sent</p>
+</h2>
+<table>
+    <tr>
+        <th>Username</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Date Sent</th>
+        <th>Status</th>
+    </tr>
+    <tr>
+        {% for r in user_relationships %}
+        <td>{{r.receiver}}</td>
+        <td>{{r.receiver.first_name}}</td>
+        <td>{{r.receiver.last_name}}</td>
+        <td>{{r.created}}</td>
+        <td>{{r.status}}</td>
+    </tr>
+    {% endfor %}
+</table>
+<br><br>
+
+
+<h2>
+    <p>Send a Friend Request</p>
+</h2>
+<form action="{% url 'FeedApp:friends' %}" method='post'>
+    {% csrf_token %}
+    <table>
+        <tr>
+            <th>Users</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Request</th>
+        </tr>
+        {% for profile in all_profiles %}
+        <tr>
+            <td>{{profile}}</td>
+            <td>{{profile.first_name}}</td>
+            <td>{{profile.last_name}}</td>
+            <td>
+                <<input type="checkbox" name="send_requests" value="{{profile.id}}">
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    <br><br>
+    <button name="submit" class="btn btn-outline-primary" style="float: left;">Send Request</button>
+</form>
+<br><br><br><br>
+
+<h2>
+    <p>Friend Request Received</p>
+</h2>
+<form action="{% url 'FeedApp:friends' %}" method='post'>
+    {% csrf_token %}
+    <table>
+        <tr>
+            <th>Users</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Request</th>
+        </tr>
+        {% for rr in request_received_profiles %}
+        <tr>
+            <td>{{rr.sender}}</td>
+            <td>{{rr.sender.first_name}}</td>
+            <td>{{rr.sender.last_name}}</td>
+            <td>
+                <input type="checkbox" name="receive_requests" value="{{rr.id}}">
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    <br><br>
+    <button name="submit" class="btn btn-outline-primary" style="float: left;">Approve Request</button>
+    <br><br><br><br>
+</form>
+
+
+
+
+
+
+{% endblock content %}
